--- a/app/src/main/res/menu/forecast.xml
+++ b/app/src/main/res/menu/forecast.xml
@@ -24,4 +24,10 @@
         android:orderInCategory="1"
         android:title="@string/action_refresh"
         app:showAsAction="ifRoom"/>
+
+    <item
+            android:id="@+id/action_setting"
+            android:title="Settings"
+            android:orderInCategory="2"
+            app:showAsAction="never"/>
 </menu>
